--- a/dev-perl/module-build/ChangeLog
+++ b/dev-perl/module-build/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/module-build
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/module-build/ChangeLog,v 1.74 2008/09/15 10:14:56 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/module-build/ChangeLog,v 1.75 2008/10/05 15:01:38 tove Exp $
+
+*module-build-0.30 (05 Oct 2008)
+
+  05 Oct 2008; Torsten Veller <tove@gentoo.org> +module-build-0.30.ebuild:
+  Version bump
 
   15 Sep 2008; Torsten Veller <tove@gentoo.org> -module-build-0.28.ebuild,
   -module-build-0.28.05.ebuild, -module-build-0.28.06.ebuild,
