--- a/x11-base/kdrive/ChangeLog
+++ b/x11-base/kdrive/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-base/kdrive
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-base/kdrive/ChangeLog,v 1.47 2008/08/05 21:19:25 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-base/kdrive/ChangeLog,v 1.48 2008/10/05 16:25:57 remi Exp $
+
+  05 Oct 2008; Rémi Cardona <remi@gentoo.org> kdrive-4.3.0-r5.ebuild:
+  fix patching (fixes bug #232980)
 
   05 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
   add GLEP 56 USE flag desc from use.local.desc
