--- a/app-emulation/vmware-dsp/ChangeLog
+++ b/app-emulation/vmware-dsp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-emulation/vmware-dsp
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/vmware-dsp/ChangeLog,v 1.3 2007/07/12 23:36:44 wolf31o2 Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/vmware-dsp/ChangeLog,v 1.4 2008/10/05 16:45:56 flameeyes Exp $
+
+  05 Oct 2008; Diego Pettenò <flameeyes@gentoo.org> vmware-dsp-1.3.ebuild:
+  Fix build-time dependencies.
 
   12 Jul 2007; Chris Gianelloni <wolf31o2@gentoo.org> vmware-dsp-1.3.ebuild:
   Add another mirror.
