--- a/media-radio/xconvers/ChangeLog
+++ b/media-radio/xconvers/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-radio/xconvers
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-radio/xconvers/ChangeLog,v 1.10 2008/04/21 17:43:47 phreak Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-radio/xconvers/ChangeLog,v 1.11 2008/10/05 21:14:40 loki_val Exp $
+
+  05 Oct 2008; Peter Alfredsen <loki_val@gentoo.org> xconvers-0.8.2.ebuild,
+  xconvers-0.8.3.ebuild:
+  Fix deps, bug 239809. Thanks to Thomas Beierlein <tb@forth-ev.de>.
 
   21 Apr 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
   Fix up metadata.xml. If there's no maintainer for the package, the metadata
