--- a/media-libs/libspiff/ChangeLog
+++ b/media-libs/libspiff/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/libspiff
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libspiff/ChangeLog,v 1.25 2008/08/13 08:49:28 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libspiff/ChangeLog,v 1.26 2008/10/05 22:07:04 aballier Exp $
+
+*libspiff-1.0.0 (05 Oct 2008)
+
+  05 Oct 2008; Alexis Ballier <aballier@gentoo.org>
+  +files/libspiff-1.0.0-testincludes.patch, +libspiff-1.0.0.ebuild:
+  version bump
 
   13 Aug 2008; Alexis Ballier <aballier@gentoo.org> -libspiff-0.8.0.ebuild:
   remove old
