--- a/dev-lang/sunstudioexpress/ChangeLog
+++ b/dev-lang/sunstudioexpress/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-lang/sunstudioexpress
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/sunstudioexpress/ChangeLog,v 1.1 2008/09/30 12:08:07 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/sunstudioexpress/ChangeLog,v 1.2 2008/10/06 08:13:25 flameeyes Exp $
+
+  06 Oct 2008; Diego Pettenò <flameeyes@gentoo.org>
+  sunstudioexpress-2008.07.24.ebuild:
+  Restrict strip since it's not built from sources.
 
 *sunstudioexpress-2008.07.24 (30 Sep 2008)
 
