--- a/profiles/default-linux/sparc/ChangeLog
+++ b/profiles/default-linux/sparc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sparc profile
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/default-linux/sparc/ChangeLog,v 1.117 2008/09/14 01:35:00 bluebird Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/default-linux/sparc/ChangeLog,v 1.118 2008/10/06 08:12:52 aballier Exp $
+
+  06 Oct 2008; Alexis Ballier <aballier@gentoo.org> package.mask:
+  Move TeX Live mask to sparc profile for bug #237202 and bug #239472
 
   14 Sep 2008; Friedrich Oslage <bluebird@gentoo.org> use.mask:
   Mask video_cards_ast, no hardware to test
