--- a/dev-libs/mpatrol/ChangeLog
+++ b/dev-libs/mpatrol/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/mpatrol
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/mpatrol/ChangeLog,v 1.17 2008/04/21 17:14:57 phreak Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/mpatrol/ChangeLog,v 1.18 2008/10/06 08:24:48 flameeyes Exp $
+
+  06 Oct 2008; Diego Pettenò <flameeyes@gentoo.org>
+  mpatrol-1.4.8-r2.ebuild:
+  Fix obvious typo, don't die every time X is disabled reporting a sed
+  failure.
 
   21 Apr 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
   Fix up metadata.xml. If there's no maintainer for the package, the metadata
