--- a/dev-ruby/ruby-mmap/ChangeLog
+++ b/dev-ruby/ruby-mmap/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/ruby-mmap
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-mmap/ChangeLog,v 1.12 2007/09/18 17:14:18 rbrown Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-mmap/ChangeLog,v 1.13 2008/10/06 10:09:25 flameeyes Exp $
+
+  06 Oct 2008; Diego Pettenò <flameeyes@gentoo.org> ruby-mmap-0.2.6.ebuild:
+  Fix building with recent ruby versions (with no cjk USE flag).
 
   18 Sep 2007; Richard Brown <rbrown@gentoo.org>
   +files/ruby-mmap-0.2.6-oniguruma_rb_reg_regsub.patch,
