--- a/x11-themes/gtk-engines-nimbus/ChangeLog
+++ b/x11-themes/gtk-engines-nimbus/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/gtk-engines-nimbus
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-nimbus/ChangeLog,v 1.12 2008/10/05 10:07:43 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-nimbus/ChangeLog,v 1.13 2008/10/06 11:31:48 gentoofan23 Exp $
+
+  06 Oct 2008; Thomas Anderson <gentoofan23@gentoo.org>
+  gtk-engines-nimbus-0.0.17.ebuild:
+  stable amd64, bug #239861 --- Tested by Victor
 
   05 Oct 2008; Diego Pettenò <flameeyes@gentoo.org>
   gtk-engines-nimbus-0.0.12.ebuild, gtk-engines-nimbus-0.0.17.ebuild,
