--- a/dev-util/stgit/ChangeLog
+++ b/dev-util/stgit/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/stgit
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/stgit/ChangeLog,v 1.27 2008/06/09 07:43:45 ferdy Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/stgit/ChangeLog,v 1.28 2008/10/06 13:05:50 flameeyes Exp $
+
+  06 Oct 2008; Diego Pettenò <flameeyes@gentoo.org> stgit-0.14.3.ebuild:
+  Fix build-time dependencies.
 
 *stgit-0.14.3 (09 Jun 2008)
 
