--- a/dev-ruby/ruby-gnomeprintui/ChangeLog
+++ b/dev-ruby/ruby-gnomeprintui/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/ruby-gnomeprintui
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gnomeprintui/ChangeLog,v 1.9 2008/04/02 07:58:55 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gnomeprintui/ChangeLog,v 1.10 2008/10/06 14:14:30 graaff Exp $
+
+  06 Oct 2008; Hans de Graaff <graaff@gentoo.org>
+  ruby-gnomeprintui-0.16.0.ebuild:
+  Add missing pkgconfig dependency, #239727
 
   02 Apr 2008; Christian Faulhammer <opfer@gentoo.org>
   ruby-gnomeprintui-0.16.0.ebuild:
