--- a/games-emulation/goosnes/ChangeLog
+++ b/games-emulation/goosnes/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-emulation/goosnes
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-emulation/goosnes/ChangeLog,v 1.9 2006/11/17 10:01:29 nyhm Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-emulation/goosnes/ChangeLog,v 1.10 2008/10/06 16:50:18 flameeyes Exp $
+
+  06 Oct 2008; Diego Pettenò <flameeyes@gentoo.org> goosnes-0.5.2.ebuild:
+  Fix obvious typo in DEPEND.
 
   17 Nov 2006; Tristan Heaven <nyhm@gentoo.org>
   +files/goosnes-0.5.2-gtk2.patch, goosnes-0.5.2.ebuild:
