--- a/net-libs/libtlen/ChangeLog
+++ b/net-libs/libtlen/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/libtlen
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libtlen/ChangeLog,v 1.14 2008/10/06 05:01:32 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libtlen/ChangeLog,v 1.15 2008/10/06 20:43:22 maekke Exp $
+
+  06 Oct 2008; Markus Meier <maekke@gentoo.org> libtlen-20060309.ebuild:
+  amd64/x86 stable, bug #239858
 
   06 Oct 2008; Jeroen Roovers <jer@gentoo.org> libtlen-20031114.ebuild,
   libtlen-20060309.ebuild:
