--- a/net-im/tleenx2/ChangeLog
+++ b/net-im/tleenx2/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-im/tleenx2
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/tleenx2/ChangeLog,v 1.13 2008/10/05 09:28:30 spock Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/tleenx2/ChangeLog,v 1.14 2008/10/06 20:45:05 maekke Exp $
+
+  06 Oct 2008; Markus Meier <maekke@gentoo.org> tleenx2-20060309.ebuild:
+  amd64/x86 stable, bug #239855
 
   05 Oct 2008; Michał Januszewski <spock@gentoo.org>
   tleenx2-20041125.ebuild:
