--- a/kde-base/kxsldbg/ChangeLog
+++ b/kde-base/kxsldbg/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for kde-base/kxsldbg
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kxsldbg/ChangeLog,v 1.97 2008/09/14 00:00:17 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kxsldbg/ChangeLog,v 1.98 2008/10/07 01:47:27 jmbsvicetto Exp $
+
+*kxsldbg-4.1.2 (07 Oct 2008)
+
+  07 Oct 2008; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
+  +kxsldbg-4.1.2.ebuild:
+  Added kxsldbg-4.1.2 from the kde-testing overlay. Thanks to Alexey
+  'alexxy' Shvetsov.
 
 *kxsldbg-3.5.10 (13 Sep 2008)
 
