Unmask dxr3 use flag for media-video/mplayer

--- a/profiles/default-linux/amd64/ChangeLog
+++ b/profiles/default-linux/amd64/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for Gentoo/AMD64 profile directory
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/default-linux/amd64/ChangeLog,v 1.156 2008/09/30 12:02:36 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/default-linux/amd64/ChangeLog,v 1.157 2008/10/07 01:51:48 beandog Exp $
+
+  07 Oct 2008; Steve Dibb <beandog@gentoo.org> package.use.mask:
+  Unmask dxr3 use flag for media-video/mplayer
 
   30 Sep 2008; Diego Pettenò <flameeyes@gentoo.org>
   2007.0/no-multilib/package.mask:
