--- a/app-text/poppler-bindings/ChangeLog
+++ b/app-text/poppler-bindings/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/poppler-bindings
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/poppler-bindings/ChangeLog,v 1.104 2008/10/05 17:01:13 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/poppler-bindings/ChangeLog,v 1.105 2008/10/07 12:09:46 nixnut Exp $
+
+  07 Oct 2008; nixnut <nixnut@gentoo.org> poppler-bindings-0.8.7.ebuild:
+  Stable on ppc wrt bug 239414
 
   05 Oct 2008; Jeroen Roovers <jer@gentoo.org>
   poppler-bindings-0.8.7.ebuild:
