--- a/app-office/openoffice/ChangeLog
+++ b/app-office/openoffice/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for app-office/openoffice
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice/ChangeLog,v 1.420 2008/10/03 11:57:28 suka Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice/ChangeLog,v 1.421 2008/10/07 12:19:08 suka Exp $
+
+*openoffice-3.0.0_rc4 (07 Oct 2008)
+
+  07 Oct 2008; Andreas Proschofsky <suka@gentoo.org>
+  -files/gentoo-3.0.0_rc3.diff, +files/gentoo-3.0.0_rc4.diff,
+  -openoffice-3.0.0_rc3.ebuild, +openoffice-3.0.0_rc4.ebuild:
+  Bump to RC4, hopefully the last one
 
 *openoffice-3.0.0_rc3 (03 Oct 2008)
 
