--- a/net-libs/libtlen/ChangeLog
+++ b/net-libs/libtlen/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/libtlen
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libtlen/ChangeLog,v 1.15 2008/10/06 20:43:22 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libtlen/ChangeLog,v 1.16 2008/10/07 12:41:42 nixnut Exp $
+
+  07 Oct 2008; nixnut <nixnut@gentoo.org> libtlen-20060309.ebuild:
+  Stable on ppc wrt bug 239858
 
   06 Oct 2008; Markus Meier <maekke@gentoo.org> libtlen-20060309.ebuild:
   amd64/x86 stable, bug #239858
