--- a/media-sound/squeezecenter/ChangeLog
+++ b/media-sound/squeezecenter/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/squeezecenter
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/squeezecenter/ChangeLog,v 1.27 2008/09/20 15:37:15 lavajoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/squeezecenter/ChangeLog,v 1.28 2008/10/07 12:57:39 nixnut Exp $
+
+  07 Oct 2008; nixnut <nixnut@gentoo.org> squeezecenter-7.1.0-r1.ebuild:
+  Stable on ppc wrt bug 237373
 
   20 Sep 2008; Joe Peterson <lavajoe@gentoo.org>
   -squeezecenter-7.1.0.ebuild, -squeezecenter-7.2.0.ebuild:
