--- a/dev-util/bzr/ChangeLog
+++ b/dev-util/bzr/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/bzr
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/bzr/ChangeLog,v 1.61 2008/10/02 09:54:11 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/bzr/ChangeLog,v 1.62 2008/10/07 14:34:21 pva Exp $
+
+*bzr-1.8_rc1 (07 Oct 2008)
+
+  07 Oct 2008; Peter Volkov <pva@gentoo.org> +files/bzr-1.8-no-pyrex.patch,
+  +bzr-1.8_rc1.ebuild:
+  Version bump.
 
 *bzr-1.7.1 (02 Oct 2008)
 
