--- a/app-benchmarks/bootchart/ChangeLog
+++ b/app-benchmarks/bootchart/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-benchmarks/bootchart
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-benchmarks/bootchart/ChangeLog,v 1.7 2008/07/23 21:44:45 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-benchmarks/bootchart/ChangeLog,v 1.8 2008/10/07 14:56:12 jer Exp $
+
+  07 Oct 2008; Jeroen Roovers <jer@gentoo.org> bootchart-0.9-r2.ebuild:
+  Marked ~hppa too.
 
   23 Jul 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
   add GLEP 56 USE flag desc from use.local.desc
