--- a/net-misc/vnc/ChangeLog
+++ b/net-misc/vnc/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/vnc
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/vnc/ChangeLog,v 1.109 2008/10/05 20:55:14 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/vnc/ChangeLog,v 1.110 2008/10/07 20:46:34 armin76 Exp $
+
+*vnc-4.1.2-r5 (07 Oct 2008)
+
+  07 Oct 2008; Raúl Porcel <armin76@gentoo.org> metadata.xml,
+  +vnc-4.1.2-r5.ebuild:
+  Revision bump, now it uses xorg-1.5.1, fixes bug #193047 and bug #147436
 
   05 Oct 2008; Raúl Porcel <armin76@gentoo.org> vnc-4.1.2-r4.ebuild:
   Add patch to fix libtool-2.2 failure, bug #237611
