--- a/app-text/poppler-bindings/ChangeLog
+++ b/app-text/poppler-bindings/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-text/poppler-bindings
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/poppler-bindings/ChangeLog,v 1.106 2008/10/07 23:11:24 loki_val Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/poppler-bindings/ChangeLog,v 1.107 2008/10/08 00:14:45 loki_val Exp $
+
+  08 Oct 2008; Peter Alfredsen <loki_val@gentoo.org>
+  poppler-bindings-0.8.7.ebuild:
+  Revert!Revert!
 
   07 Oct 2008; Peter Alfredsen <loki_val@gentoo.org>
   -poppler-bindings-0.8.5.ebuild, poppler-bindings-0.8.7.ebuild:
