--- a/app-text/cabocha/ChangeLog
+++ b/app-text/cabocha/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-text/cabocha
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/cabocha/ChangeLog,v 1.4 2006/11/02 19:11:44 usata Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/cabocha/ChangeLog,v 1.5 2008/10/08 00:24:19 matsuu Exp $
+
+*cabocha-0.60_pre4 (08 Oct 2008)
+
+  08 Oct 2008; MATSUU Takuto <matsuu@gentoo.org> +cabocha-0.60_pre4.ebuild:
+  Version bumped, bug #239605. Clean up.
 
   02 Nov 2006; Mamoru KOMACHI <usata@gentoo.org> -cabocha-0.52.ebuild,
   cabocha-0.53.ebuild:
