--- a/dev-cpp/cppserv/ChangeLog
+++ b/dev-cpp/cppserv/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for dev-cpp/cppserv
 # Copyright 2006-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/cppserv/ChangeLog,v 1.22 2008/06/27 18:20:50 iluxa Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/cppserv/ChangeLog,v 1.23 2008/10/08 06:44:32 iluxa Exp $
+
+*cppserv-0.1.115 (08 Oct 2008)
+
+  08 Oct 2008; Ilya A. Volynets-Evenbakh <iluxa@gentoo.org>
+  -cppserv-0.1.109.ebuild, -cppserv-0.1.112.ebuild, +cppserv-0.1.115.ebuild:
+  Added cppserv-0.1.115.
+  Removed old versions.
+  Fixed flag processing.
+  Fixed 64bit install paths.
 
 *cppserv-0.1.113 (27 Jun 2008)
 
