--- a/media-radio/ssbd/ChangeLog
+++ b/media-radio/ssbd/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-radio/ssbd
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-radio/ssbd/ChangeLog,v 1.3 2007/05/15 13:26:51 bangert Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-radio/ssbd/ChangeLog,v 1.4 2008/10/08 09:49:46 flameeyes Exp $
+
+  08 Oct 2008; Diego Pettenò <flameeyes@gentoo.org> ssbd-0.07.ebuild:
+  Fix build-time dependency and remove defautl src_compile.
 
   15 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
   add <herd>no-herd</herd>
