--- a/media-sound/demolition/ChangeLog
+++ b/media-sound/demolition/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/demolition
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/demolition/ChangeLog,v 1.8 2007/02/22 00:56:14 peper Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-sound/demolition/ChangeLog,v 1.9 2008/10/08 09:52:21 flameeyes Exp $
+
+  08 Oct 2008; Diego Pettenò <flameeyes@gentoo.org> demolition-0.9.ebuild:
+  Fix build-time dependencies.
 
   22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
   Transition to Manifest2.
