--- a/media-video/camstream/ChangeLog
+++ b/media-video/camstream/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-video/camstream
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/camstream/ChangeLog,v 1.24 2008/06/21 11:57:59 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/camstream/ChangeLog,v 1.25 2008/10/08 10:06:45 flameeyes Exp $
+
+  08 Oct 2008; Diego Pettenò <flameeyes@gentoo.org>
+  camstream-20070315.ebuild:
+  Fix build-time dependencies.
 
   21 Jun 2008; Diego Pettenò <flameeyes@gentoo.org>
   camstream-20070315.ebuild:
