--- a/dev-util/darcs/ChangeLog
+++ b/dev-util/darcs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/darcs
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/darcs/ChangeLog,v 1.96 2008/10/04 18:07:38 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/darcs/ChangeLog,v 1.97 2008/10/08 20:42:53 maekke Exp $
+
+  08 Oct 2008; Markus Meier <maekke@gentoo.org> darcs-2.0.2.ebuild:
+  amd64/x86 stable, bug #239368
 
   04 Oct 2008; Raúl Porcel <armin76@gentoo.org> darcs-2.0.2.ebuild:
   alpha/ia64 stable wrt #239368
