--- a/sci-calculators/qalculate-kde/ChangeLog
+++ b/sci-calculators/qalculate-kde/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sci-calculators/qalculate-kde
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-calculators/qalculate-kde/ChangeLog,v 1.23 2008/06/15 14:31:40 markusle Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-calculators/qalculate-kde/ChangeLog,v 1.24 2008/10/08 21:25:06 maekke Exp $
+
+  08 Oct 2008; Markus Meier <maekke@gentoo.org>
+  qalculate-kde-0.9.6-r1.ebuild:
+  amd64/x86 stable, bug #240516
 
   15 Jun 2008; Markus Dittrich <markusle@gentoo.org>
   -files/qalculate-kde-makefile.patch, -qalculate-kde-0.9.4.ebuild,
