--- a/dev-cpp/cppserv/ChangeLog
+++ b/dev-cpp/cppserv/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-cpp/cppserv
 # Copyright 2006-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/cppserv/ChangeLog,v 1.23 2008/10/08 06:44:32 iluxa Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/cppserv/ChangeLog,v 1.24 2008/10/09 09:44:41 iluxa Exp $
+
+  09 Oct 2008; Ilya A. Volynets-Evenbakh <iluxa@gentoo.org>
+  cppserv-0.1.115.ebuild:
+  Fix libdir path
 
 *cppserv-0.1.115 (08 Oct 2008)
 
