--- a/dev-cpp/sptk/ChangeLog
+++ b/dev-cpp/sptk/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for dev-cpp/sptk
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/sptk/ChangeLog,v 1.39 2008/10/02 18:55:36 iluxa Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/sptk/ChangeLog,v 1.40 2008/10/09 14:44:58 iluxa Exp $
+
+  09 Oct 2008; Ilya A. Volynets-Evenbakh <iluxa@gentoo.org>
+  sptk-3.5.8.ebuild:
+  Add "examples" to IUSE
+
+  09 Oct 2008; Ilya A. Volynets-Evenbakh <iluxa@gentoo.org>
+  sptk-3.5.8.ebuild:
+  Add mysql use flag
 
   02 Oct 2008; Ilya A. Volynets-Evenbakh <iluxa@gentoo.org>
   sptk-3.5.7.13.ebuild, sptk-3.5.8.ebuild:
