amd64/x86 stable, bug #243078 Package-Manager: portage-2.2_rc12/cvs/Linux 2.6.27.1 i686

--- a/app-backup/dar/ChangeLog
+++ b/app-backup/dar/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-backup/dar
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-backup/dar/ChangeLog,v 1.35 2008/08/01 18:47:18 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-backup/dar/ChangeLog,v 1.36 2008/10/23 19:24:17 maekke Exp $
+
+  23 Oct 2008; Markus Meier <maekke@gentoo.org> dar-2.3.8.ebuild:
+  amd64/x86 stable, bug #243078
 
   01 Aug 2008; nixnut <nixnut@gentoo.org> dar-2.3.7-r1.ebuild:
   Stable on ppc wrt bug 225839
