--- a/app-backup/rdiff-backup/ChangeLog
+++ b/app-backup/rdiff-backup/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-backup/rdiff-backup
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-backup/rdiff-backup/ChangeLog,v 1.34 2008/09/03 16:21:18 wschlich Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-backup/rdiff-backup/ChangeLog,v 1.35 2008/11/01 07:05:55 robbat2 Exp $
+
+*rdiff-backup-1.2.2 (01 Nov 2008)
+
+  01 Nov 2008; Robin H. Johnson <robbat2@gentoo.org>
+  +rdiff-backup-1.2.2.ebuild:
+  Bug #243018, version bump.
 
 *rdiff-backup-1.2.1 (03 Sep 2008)
 
