--- a/app-backup/mylvmbackup/ChangeLog
+++ b/app-backup/mylvmbackup/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-backup/mylvmbackup
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-backup/mylvmbackup/ChangeLog,v 1.8 2008/06/07 01:01:33 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-backup/mylvmbackup/ChangeLog,v 1.9 2008/11/01 07:09:11 robbat2 Exp $
+
+*mylvmbackup-0.9 (01 Nov 2008)
+
+  01 Nov 2008; Robin H. Johnson <robbat2@gentoo.org>
+  +mylvmbackup-0.9.ebuild:
+  Version bump.
 
   07 Jun 2008; Robin H. Johnson <robbat2@gentoo.org> mylvmbackup-0.8.ebuild:
   Bug #162681, fix manpage location.
