--- a/app-backup/duplicity/ChangeLog
+++ b/app-backup/duplicity/ChangeLog
@@ -1,6 +1,16 @@
 # ChangeLog for app-backup/duplicity
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-backup/duplicity/ChangeLog,v 1.28 2008/08/30 14:09:59 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-backup/duplicity/ChangeLog,v 1.29 2008/11/03 02:16:53 vanquirius Exp $
+
+*duplicity-0.5.02 (03 Nov 2008)
+
+  03 Nov 2008; Marcelo Goes <vanquirius@gentoo.org>
+  -files/duplicity-0.4.2-python-2.5.patch, -files/0.4.2-ftp-retry.patch,
+  -duplicity-0.4.2-r1.ebuild, -duplicity-0.4.2-r2.ebuild,
+  -duplicity-0.4.3.ebuild, -duplicity-0.4.6.ebuild, -duplicity-0.4.7.ebuild,
+  -duplicity-0.4.9.ebuild, +duplicity-0.5.02.ebuild:
+  0.5.02 version bump, thanks to Thomas Anderson <gentoofan32 at gentoo dot
+  org>. Also removing old ebuilds.
 
   30 Aug 2008; Brent Baude <ranger@gentoo.org> duplicity-0.4.11.ebuild:
   stable ppc, bug 234397
