--- a/app-backup/bacula/ChangeLog
+++ b/app-backup/bacula/ChangeLog
@@ -1,6 +1,19 @@
 # ChangeLog for app-backup/bacula
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-backup/bacula/ChangeLog,v 1.69 2008/08/11 17:26:35 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-backup/bacula/ChangeLog,v 1.70 2008/11/07 01:44:18 wschlich Exp $
+
+*bacula-2.4.3 (07 Nov 2008)
+
+  07 Nov 2008; Wolfram Schlich <wschlich@gentoo.org>
+  +files/2.4.3/2.4.3-cancel-after-network-outage.patch,
+  +files/2.4.3/2.4.3-orphaned-jobs.patch,
+  +files/2.4.3/2.4.3-update-slots.patch,
+  +files/2.4.3/bacula-default-configs.patch, +files/2.4.3/bacula-dir-conf,
+  +files/2.4.3/bacula-dir-init, +files/2.4.3/bacula-fd-conf,
+  +files/2.4.3/bacula-fd-init, +files/2.4.3/bacula-gnomesu2gksu.diff,
+  +files/2.4.3/bacula-sd-conf, +files/2.4.3/bacula-sd-init,
+  +bacula-2.4.3.ebuild:
+  version bump
 
   11 Aug 2008; Ben de Groot <yngwin@gentoo.org> bacula-2.4.1.ebuild,
   bacula-2.4.1-r1.ebuild, bacula-2.4.2.ebuild:
