--- a/app-backup/dar/ChangeLog
+++ b/app-backup/dar/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-backup/dar
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-backup/dar/ChangeLog,v 1.37 2008/10/25 17:41:45 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-backup/dar/ChangeLog,v 1.38 2008/11/08 16:14:11 armin76 Exp $
+
+  08 Nov 2008; Raúl Porcel <armin76@gentoo.org> dar-2.3.8.ebuild:
+  sparc stable wrt #243078
 
   25 Oct 2008; nixnut <nixnut@gentoo.org> dar-2.3.8.ebuild:
   Stable on ppc wrt bug 243078
